--- a/pages/contacts/index.css
+++ b/pages/contacts/index.css
@@ -7,6 +7,7 @@
   }
   
   body{
+    padding-top: 400px;
     background-color: var(--dark);
     font-family: Arial, Helvetica, sans-serif;
     color: var(--white);
