--- a/pages/contacts/index.css
+++ b/pages/contacts/index.css
@@ -7,10 +7,8 @@
   }
   
   body{
-    padding-top: 400px;
-    background-color: var(--dark);
+    padding-top: 100px;
     font-family: Arial, Helvetica, sans-serif;
-    color: var(--white);
     display: flex;
     justify-content: center;
     height: 100vh;
@@ -18,7 +16,7 @@
   
   .box-questions{
     margin-top: 3rem;
-    background-color: var(--white);
+    background-color: white;
     color: var(--dark);
     display: flex;
     flex-direction: column;
@@ -27,20 +25,7 @@
     width: 600px;
     border-radius: 10px;
     text-align: center;
-  }
-  
-  .header{
-    background-color: var(--purple);
-    color: rgb(124, 122, 122);
-    border-radius: 10px 10px 0 0;
-    font-size: 1.4rem;
-  }
-  
-  .footer{
-    background-color: var(--purple);
-    border-radius: 0 0 10px 10px;
-    padding: 1rem;
-  }
+  }   
   
   input{
     width: 50%;
@@ -51,14 +36,14 @@
     font-size: 1rem;
   }
   
-  button{
+  .btn-submit{
     border: none;
     border-radius: 5px;
     padding: 10px;
     font-size: 1rem;
   }
   
-  button:hover{
+ .btn-submit:hover{
     cursor: pointer;
     transition: .4s;
     background-color: var(--gray);
