--- a/index.css
+++ b/index.css
@@ -240,7 +240,12 @@
   
   .btn-primary {
     padding: 8px 16px;
-    border-radius: var(--radius-6);
+    border-radius: 90px;
+    
+  }
+  .btn-primary img{
+    width: 50px;
+    border-radius: 90px;
   }
   
   .btn-secondary {
