--- a/pages/profile/index.css
+++ b/pages/profile/index.css
@@ -1,15 +1,19 @@
+
+
 .userProfile img {
     display: block;
     width: 100%;
     max-width: 320px;
     margin: auto;
     border-radius: .3rem;
+padding-top :60px ;
 }
 
 .userProfile h3 {
     text-align: center;
     margin: 0;
     padding: .5rem 0 1rem 0;
+  
 }
 
 .userProfile ul {
