--- a/pages/about/index.css
+++ b/pages/about/index.css
@@ -8,3 +8,6 @@ body{
     margin-bottom: 1rem;
     cursor: pointer;
   } 
+  aside{
+    background-image: linear-gradient(rgb(42, 180, 204), rgb(2, 19, 46)); ;
+ }
